# alea

./: #Misc.v#  .CoqMakefile.d  .gitignore  .travis.yml  Ccpo.glob  Ccpo.v  Choice.glob  Choice.v  Cover.glob  Cover.v  LICENSE  Makefile  Misc.glob  Misc.v  Monads.glob  Monads.v  Probas.glob  Probas.v  Prog.glob  Prog.v  README.md  Sets.glob  Sets.v  Uprop.glob  Uprop.v  Utheory.glob  Utheory.v  _CoqProject  coq-alea.opam  default.nix  dune  dune-project  meta.yml
.github/workflows/: coq-ci.yml  docker-action.yml
